# chitti

./: .env.example  Cargo.toml  TODO.md
docs/: PLAN.md  batch-api-guide.md  batch-api.md  caching-api-guide.md  files-api.md  gemini-api.md  interactions-api.md  token-counting-api.md  token-counting-guide.md  tools-infra.md
src/: config.rs  error.rs  gemini.rs  lib.rs  main.rs
src/brains/: mod.rs
src/brains/gemini/: adapter.rs  batch.rs  caching.rs  client.rs  error.rs  files.rs  interactions.rs  mod.rs  types.rs
src/bridges/: mock.rs  mod.rs  tui.rs
src/conductor/: events.rs  mod.rs  session.rs
src/gemini/: batch.rs  caching.rs  client.rs  error.rs  files.rs  interactions.rs  mod.rs  types.rs
src/tools/: bash.rs  editor.rs  mod.rs  web.rs
tests/: integration_tests.rs  test_file.txt
