[package]
name = "chitti"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

thiserror = "2.0"

mime_guess = "2.0"

futures-util = "0.3"
async-stream = "0.3"
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
uuid = { version = "1.21.0", features = ["v4"] }
http = "1.4.0"
async-trait = "0.1.89"

[dev-dependencies]
mockito = "1.7.2"
