[package]
name = "chitti"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", default-features = false, features = ["macros", "rt-multi-thread", "fs", "process", "time", "sync", "io-util"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "rustls", "query", "http2"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "env-filter", "ansi"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
mime_guess = "2.0.5"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
async-stream = "0.3.6"
tokio-util = { version = "0.7.18", default-features = false, features = ["codec", "io"] }
uuid = { version = "1.21.0", features = ["v4"] }
http = "1.4.0"
async-trait = "0.1.89"
ratatui = "0.30.0"
crossterm = "0.29.0"

[dev-dependencies]
mockito = "1.7.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
